[Case Study] refactored subdir; small edits to notebook text
Former-commit-id: 8ca686e7a736f5edd61a4b39dcd51f58e5da93ef [formerly 45b0c7ca94459ccbf39746f8cb9fc0723d74e1da]
Former-commit-id: 2dc7f35c0c908715725f2db2e9a07b278c4b74a3

--- a/Model_Evaluation_Case_Studies/CIC-IDS-2017/notebooks/EDA.Rmd
+++ b/Model_Evaluation_Case_Studies/CIC-IDS-2017/notebooks/EDA.Rmd
@@ -17,7 +17,7 @@ library(kableExtra)
 ### Load the Data
 
 ```{r load, warning=FALSE, message=FALSE}
-thurs <- read_csv("./Model_Evaluation_Case_Studies/CIC-IDS-2017/data/Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv") %>%
+thurs <- read_csv("./Model_Evaluation_Case_Studies/CIC-IDS-2017/data/raw/Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv") %>%
   mutate(Label = factor(iconv(Label, "latin1", "ASCII", sub=":")))
 ```
 
@@ -166,7 +166,7 @@ thurs %>% select(-c(`Fwd PSH Flags`, `Bwd PSH Flags`,
 By and large, the malicious communications do not represent statistical outliers for these datasets. Presumably due to deliberate obfuscation, most attacks resemble the norm and do not land on the far end of the spectrum for any these features.
 
 
-```{r principal_component_analysis, eval=FALSE}
+```{r principal_component_analysis}
 new_df <- thurs %>% select(-c(Label, `Fwd PSH Flags`, `Bwd PSH Flags`, 
          `Fwd URG Flags`, `Bwd URG Flags`, 
          `FIN Flag Count`, `SYN Flag Count`, 
